--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "NucelarToDOList",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "ToDo list application built using Electron",
   "main": "main.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "dist": "build"
   },
   "build": {
-      "appId": "com.github.DarFig.SimpleTimer",
+      "appId": "com.github.DarFig.NucelarToDOList",
       "productName": "NucelarToDOList"
   },
   "author": "Dariel https://github.com/DarFig",
